--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>GetHubspot</title>
+    <link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <!-- Intestazione -->
+    <div class="background">
+      <header class="top container">
+        <nav class="contact">
+          <ul>
+            <li><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i></li>
+            <li id="space">|</li>
+            <li> Contact Us</li>
+          </ul>
+        </nav>
+        <nav class="search" >
 
+        </nav>
+      </header>
+    </div>
   </body>
 </html>
