Search and contact done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <!-- Intestazione -->
+
+
     <div class="background">
+
+      <!-- Search and contact -->
       <header class="top container">
         <nav class="contact">
           <ul>
@@ -19,9 +23,19 @@
           </ul>
         </nav>
         <nav class="search" >
-
+          <ul>
+            <li><i class="fa fa-search" aria-hidden="true"></i></li>
+            <li><button class="login" type="button" name="button">Log in</button></li>
+            <li><button class="generic" type="button" name="button">GetHubspotFree</button></li>
+          </ul>
         </nav>
+      <!-- Search and contact -->
+
       </header>
+
+
     </div>
+
+
   </body>
 </html>
