Background image WIP

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Intestazione -->
 
 
-    <div class="background">
+    <div class="background-blue clearfix">
 
       <!-- Search and contact -->
       <header class="top container">
@@ -30,10 +30,39 @@
           </ul>
         </nav>
       <!-- Search and contact -->
-      <img src="" alt="">
       </header>
 
 
+    </div>
+
+    <!-- sottointestazione logo -->
+    <div class="background-white">
+
+
+      <section class="container clearfix">
+        <div id="contlogo">
+          <img src="img\logo.svg" alt="">
+        </div>
+        <ul class="selection">
+          <li>Software</li>
+          <li><i class="fas fa-chevron-down"></i></li>
+          <li>Pricing</li>
+          <li>Resources</li>
+          <li><i class="fas fa-chevron-down"></i></li>
+          <li>Partners</li>
+          <li><i class="fas fa-chevron-down"></i></li>
+          <li>About</li>
+          <li><i class="fas fa-chevron-down"></i></li>
+          <li></li>
+        </ul>
+      </section>
+    </div>
+  <!-- /sottointestazione logo -->
+<!-- /* testata di presentazione */   -->
+    <div class="background-pink">
+      <section>
+
+      </section>
     </div>
 
 
