--- a/index.html
+++ b/index.html
@@ -60,11 +60,20 @@
   <!-- /sottointestazione logo -->
 <!-- /* testata di presentazione */   -->
     <div class="background-pink">
-      <section>
 
+
+      <section class="container">
+        <div class="presentation">
+          <h1>There's a better way to grow.</h1>
+          <p>Marketing,sales,and service software that helps your business grow without compromise.Because "good for the business" shoul also mean <br> "good for the customer"</p>
+          <button class="generic" type="button" name="button">GetHubspotFree</button>
+          <p>Get started with FREE tools, and upgrade as you grow</p>
+        </div>
       </section>
-    </div>
 
+      
+    </div>
+    <!-- /* testata di presentazione */   -->
 
   </body>
 </html>
