--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </div>
       </section>
 
-      
+
     </div>
     <!-- /* testata di presentazione */   -->
-
+    <div class="green-space"></div>
   </body>
 </html>
