--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <!-- Intestazione -->
+    <header>
 
 
     <div class="background-blue clearfix">
 
       <!-- Search and contact -->
-      <header class="top container">
+      <div class="top container">
         <nav class="contact">
           <ul>
             <li><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i></li>
@@ -30,7 +31,7 @@
           </ul>
         </nav>
       <!-- Search and contact -->
-      </header>
+      </div>
 
 
     </div>
@@ -74,6 +75,22 @@
 
     </div>
     <!-- /* testata di presentazione */   -->
+    <!-- Distaccamento -->
     <div class="green-space"></div>
+    <!-- Distaccamento -->
+    </header>
+    <!-- Corpo della pagina -->
+    <main>
+      <!-- sezione 1  -->
+      <section class="container2">
+
+      </section>
+
+
+
+
+
+
+    </main>
   </body>
 </html>
