--- a/index.html
+++ b/index.html
@@ -89,9 +89,27 @@
         <h2>Powerful Alone. Better Toghether</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
       </section>
-      <section class="container">
-
+      <section class="container background-white">
+        <div class="book-left">
+          <img src="img\CRM-Illustration.svg" alt="">
+          <button class="generic" type="button" name="button">Learn more</button>
+        </div>
+        <div class="crm">
+          <h2>Free HubSpot CRM</h2>
+          <p>Everything you need to organize, track and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+          <h3>POPOLAR FEATURE</h3>
+          <hr>
+          <ul>
+            <li><i class="fas fa-check-circle"></i></li>
+            <li>Contact Insight</li>
+            <li><i class="fas fa-check-circle"></i></li>
+            <li>Deals</li>
+            <li><i class="fas fa-check-circle"></i></li>
+            <li>Task</li>
+            </ul>
+        </div>
       </section>
+
     </div>
 
 
