--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h2>Powerful Alone. Better Toghether</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
       </section>
-      <section class="container background-white">
+      <section class="container background-white clearfix">
         <div class="book-left">
           <img src="img\CRM-Illustration.svg" alt="">
           <button class="generic" type="button" name="button">Learn more</button>
@@ -109,9 +109,53 @@
             </ul>
         </div>
       </section>
+      </div>
+
+      <div class="background-grey clearfix">
+
+        <section class="widget container">
+          <div class="box left">
+            <img src="img\Marketing-Hub-Free.svg" alt="">
+            <h2>Marketing Hub</h2>
+            <p>Marketing software to help you grow traffic, convert more visitors and run complete inbound marketing campaings at scale</p>
+            <hr>
+            <h3>POPOLAR FEATURE</h3>
+            <ul>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+              <li><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+          </div>
+          <div class="box center">
+            <img src="img\Marketing-Hub-Free.svg" alt="">
+            <h2>Marketing Hub</h2>
+            <p>Marketing software to help you grow traffic, convert more visitors and run complete inbound marketing campaings at scale</p>
+            <hr>
+            <h3>POPOLAR FEATURE</h3>
+            <ul>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+              <li><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+          </div>
+          <div class="box right">
+            <img src="img\Marketing-Hub-Free.svg" alt="">
+            <h2>Marketing Hub</h2>
+            <p>Marketing software to help you grow traffic, convert more visitors and run complete inbound marketing campaings at scale</p>
+            <hr>
+            <h3>POPOLAR FEATURE</h3>
+            <ul>
+              <li><i class="fas fa-check-circle"></i>Lead Generation</li>
+              <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
+              <li><i class="fas fa-check-circle"></i>Analytics</li>
+            </ul>
+
+          </div>
+
+        </section>
 
     </div>
-
+    
 
 
 
