--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <section class="widget container">
           <div class="box left">
-            <img src="img\Marketing-Hub-Free.svg" alt="">
+            <img src="img/Marketing-Hub-Free.svg" alt="">
             <h2>Marketing Hub</h2>
             <p>Marketing software to help you grow traffic, convert more visitors and run complete inbound marketing campaings at scale</p>
             <hr>
@@ -125,9 +125,10 @@
               <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
               <li><i class="fas fa-check-circle"></i>Analytics</li>
             </ul>
+            <button class="generic" type="button" name="button">Learn more</button>
           </div>
           <div class="box center">
-            <img src="img\Marketing-Hub-Free.svg" alt="">
+            <img src="img/Sales-Professional-Illustration.svg" alt="">
             <h2>Marketing Hub</h2>
             <p>Marketing software to help you grow traffic, convert more visitors and run complete inbound marketing campaings at scale</p>
             <hr>
@@ -137,9 +138,10 @@
               <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
               <li><i class="fas fa-check-circle"></i>Analytics</li>
             </ul>
+            <button class="generic" type="button" name="button">Learn more</button>
           </div>
           <div class="box right">
-            <img src="img\Marketing-Hub-Free.svg" alt="">
+            <img src="img/Service-Hub-Illustration.svg" alt="">
             <h2>Marketing Hub</h2>
             <p>Marketing software to help you grow traffic, convert more visitors and run complete inbound marketing campaings at scale</p>
             <hr>
@@ -149,14 +151,65 @@
               <li><i class="fas fa-check-circle"></i>Marketing Automation</li>
               <li><i class="fas fa-check-circle"></i>Analytics</li>
             </ul>
-
+            <button class="generic" type="button" name="button">Learn more</button>
           </div>
 
         </section>
 
     </div>
-    
+    <div class="gradiente">
+      <section class="stat container">
+        <h2>Learn and grow with award winning support and a thriving community behind you. </h2>
+        <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+        <div class="colonne">
+          <div class="col1">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
 
+          </div>
+          <div class="col2">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
+          </div>
+          <div class="col3">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
+          </div>
+          <div class="col4">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
+          </div>
+          <div class="col5">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
+
+          </div>
+          <div class="col6">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
+
+          </div>
+          <div class="col7">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
+
+          </div>
+          <div class="col8">
+            <i class="fas fa-handshake"></i>
+            <p>150 +</p>
+            <p><small> HubSpot user groups</small></p>
+
+          </div>
+        </div>
+      </section>
+    </div>
 
 
 
