--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h2>Powerful Alone. Better Toghether</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
       </section>
-      <section class="container background-white clearfix">
+      <section class="container background-shadow clearfix">
         <div class="book-left">
           <img src="img\CRM-Illustration.svg" alt="">
           <button class="generic" type="button" name="button">Learn more</button>
@@ -210,7 +210,7 @@
         </div>
       </section>
     </div>
-
+    
 
 
     </main>
