Starting final main

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         </section>
 
     </div>
+    <!-- gradiente -->
     <div class="gradiente">
       <section class="stat container">
         <h2>Learn and grow with award winning support and a thriving community behind you. </h2>
@@ -210,8 +211,20 @@
         </div>
       </section>
     </div>
-    
+    <!-- gradiente -->
 
+    <!-- Fine main -->
+    <section>
+      <div class="container">
+        <div class="number">
+          <h2>64,500</h2>
+          <p>Customers in over <strong>100</strong><br> countries  growing their <br> business with HubSpot</p>
+        </div>
+        <div class="adv">
+          
+        </div>
+      </div>
+    </section>
 
     </main>
   </body>
