--- a/index.html
+++ b/index.html
@@ -164,47 +164,47 @@
         <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
         <div class="colonne">
           <div class="col1">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
 
           </div>
           <div class="col2">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
           </div>
           <div class="col3">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
           </div>
           <div class="col4">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
           </div>
           <div class="col5">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
 
           </div>
           <div class="col6">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
 
           </div>
           <div class="col7">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
 
           </div>
           <div class="col8">
-            <i class="fas fa-handshake"></i>
-            <p>150 +</p>
+            <img src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
+            <p class="col-stat">150 +</p>
             <p><small> HubSpot user groups</small></p>
 
           </div>
@@ -221,7 +221,14 @@
           <p>Customers in over <strong>100</strong><br> countries  growing their <br> business with HubSpot</p>
         </div>
         <div class="adv">
-          
+          <p>Atlassian</p>
+          <p>Doordash</p>
+          <p>Crowd</p>
+          <p>Purple</p>
+          <p>Subaru</p>
+          <p>Wistia</p>
+          <p>ClassPass</p>
+          <p>VMWare</p>
         </div>
       </div>
     </section>
