--- a/index.html
+++ b/index.html
@@ -215,24 +215,92 @@
 
     <!-- Fine main -->
     <section>
-      <div class="container">
+      <div class="container clearfix">
         <div class="number">
           <h2>64,500</h2>
           <p>Customers in over <strong>100</strong><br> countries  growing their <br> business with HubSpot</p>
         </div>
         <div class="adv">
-          <p>Atlassian</p>
-          <p>Doordash</p>
-          <p>Crowd</p>
-          <p>Purple</p>
-          <p>Subaru</p>
-          <p>Wistia</p>
-          <p>ClassPass</p>
-          <p>VMWare</p>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="">
+          </div>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="">
+          </div>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="">
+          </div>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg" alt="">
+          </div>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="">
+          </div>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="">
+          </div>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="">
+          </div>
+          <div class="logo-adv">
+            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="container clearfix">
+        <div class="last-button">
+          <h2>Sart Growing With HubSpot Today</h2>
+          <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound hass never been easier.</p>
+          <button class="generic" type="button" name="button">GetHubspotFree</button>
+          <p><small>Get started with FREE tools, or get more with our premium software</small> </p>
+        </div>
+        <div class="lady">
+          <img src="img\woman.webp" alt="">
         </div>
       </div>
     </section>
 
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="colonne">
+          <h4>Increase Your Traffic</h4>
+          <p>Ad Software</p>
+          <p>Blog software</p>
+          <p>SEO Software</p>
+          <p>Social Media Software</p>
+          <p>Content Management System</p>
+        </div>
+        <div class="colonne">
+          <h4>Increase Your Traffic</h4>
+          <p>Ad Software</p>
+          <p>Blog software</p>
+          <p>SEO Software</p>
+          <p>Social Media Software</p>
+          <p>Content Management System</p>
+        </div>
+        <div class="colonne">
+          <h4>Increase Your Traffic</h4>
+          <p>Ad Software</p>
+          <p>Blog software</p>
+          <p>SEO Software</p>
+          <p>Social Media Software</p>
+          <p>Content Management System</p>
+        </div>
+        <div class="colonne">
+          <h4>Increase Your Traffic</h4>
+          <p>Ad Software</p>
+          <p>Blog software</p>
+          <p>SEO Software</p>
+          <p>Social Media Software</p>
+          <p>Content Management System</p>
+          <button class="generic" type="button" name="button">Contact HubSpot Support</button>
+        </div>
+      </div>
+
+
+    </footer>
   </body>
 </html>
