--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <footer>
       <div class="container">
-        <div class="colonne">
+        <div class="colonne2 clearfix">
           <h4>Increase Your Traffic</h4>
           <p>Ad Software</p>
           <p>Blog software</p>
@@ -273,7 +273,7 @@
           <p>Social Media Software</p>
           <p>Content Management System</p>
         </div>
-        <div class="colonne">
+        <div class="colonne2">
           <h4>Increase Your Traffic</h4>
           <p>Ad Software</p>
           <p>Blog software</p>
@@ -281,7 +281,7 @@
           <p>Social Media Software</p>
           <p>Content Management System</p>
         </div>
-        <div class="colonne">
+        <div class="colonne2">
           <h4>Increase Your Traffic</h4>
           <p>Ad Software</p>
           <p>Blog software</p>
@@ -289,14 +289,39 @@
           <p>Social Media Software</p>
           <p>Content Management System</p>
         </div>
-        <div class="colonne">
+        <div class="colonne2">
           <h4>Increase Your Traffic</h4>
           <p>Ad Software</p>
           <p>Blog software</p>
           <p>SEO Software</p>
           <p>Social Media Software</p>
           <p>Content Management System</p>
-          <button class="generic" type="button" name="button">Contact HubSpot Support</button>
+          <button class="generic" type="button" name="button">Contact HubSpot Support</button> <br>
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-youtube"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-linkedin-in"></i>
+        </div>
+        <div class="lingue">
+          <p>English</p>
+          <p>Deutsch</p>
+          <p>日本人</p>
+          <p>Español</p>
+          <p>Português</p>
+          <p>Français</p>
+
+        </div>
+        <hr>
+        <div class="cpyr">
+          <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="">
+          <h3>Copyright &copy; 2019 HubSpot, Inc.</h3>
+
+        </div>
+        <div class="pryvc">
+          <p>Legal Stuff</p>
+          <p>Privacy Policy</p>
+          
         </div>
       </div>
 
