--- a/index.html
+++ b/index.html
@@ -321,11 +321,16 @@
         <div class="pryvc">
           <p>Legal Stuff</p>
           <p>Privacy Policy</p>
-          
+
         </div>
       </div>
 
 
     </footer>
+
+    <div class="popup">
+      <i class="fas fa-comments"></i>
+
+    </div>
   </body>
 </html>
