--- a/index.html
+++ b/index.html
@@ -327,10 +327,11 @@
 
 
     </footer>
-
+    <div class="popchat">
+      <p>👋 Want to chat about HubSpot? <br> I'm here to help you find your way. </p>
+    </div>
     <div class="popup">
       <i class="fas fa-comments"></i>
-
     </div>
   </body>
 </html>
