--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@
     </footer>
     <div class="popchat">
       <p>👋 Want to chat about HubSpot? <br> I'm here to help you find your way. </p>
+      <div class="popoption">
+        <i class="fas fa-times"></i>
+      </div>
     </div>
     <div class="popup">
       <i class="fas fa-comments"></i>
