--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
       <div class="top container">
         <nav class="contact">
           <ul>
-            <li><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i></li>
+            <li>
+              <div class="dropdown">
+
+               <button class="dropbtn"> <i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i> </button>
+                <div class="dropdowncontent">
+                  <a href="#">Francese</a>
+                  <a href="#">Italiano</a>
+                  <a href="#">Giapponese</a>
+                </div>
+              </div>
+            </li>
             <li id="space">|</li>
             <li> Contact Us</li>
           </ul>
@@ -328,6 +338,9 @@
 
     </footer>
     <div class="popchat">
+      <div class="poppic">
+
+      </div>
       <p>👋 Want to chat about HubSpot? <br> I'm here to help you find your way. </p>
       <div class="popoption">
         <i class="fas fa-times"></i>
