--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <section class="container clearfix">
           <div id="contlogo">
-            <img src="img\logo.svg" alt="">
+            <img src="img/logo.svg" alt="">
           </div>
           <ul class="selection">
             <li>Software</li>
@@ -101,7 +101,7 @@
         </section>
         <section class="container background-shadow clearfix">
           <div class="book-left">
-            <img src="img\CRM-Illustration.svg" alt="">
+            <img src="img/CRM-Illustration.svg" alt="">
             <button class="generic" type="button" name="button">Learn more</button>
           </div>
           <div class="crm">
@@ -266,7 +266,7 @@
             <p><small>Get started with FREE tools, or get more with our premium software</small> </p>
           </div>
           <div class="lady">
-            <img src="img\woman.webp" alt="">
+            <img src="img/woman.webp" alt="">
           </div>
         </div>
       </section>
