--- a/index.html
+++ b/index.html
@@ -173,46 +173,46 @@
           <h2>Learn and grow with award winning support and a thriving community behind you. </h2>
           <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
           <div class="colonne">
-            <div class="col1">
+            <div class="col">
               <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="">
               <p class="col-stat">150 +</p>
               <p><small> HubSpot user groups</small></p>
 
             </div>
-            <div class="col2">
+            <div class="col">
               <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="">
               <p class="col-stat">4.5M +</p>
               <p><small> monthly visits</small></p>
             </div>
-            <div class="col3">
+            <div class="col">
               <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="">
               <p class="col-stat">155K+</p>
               <p><small> certified professionals</small></p>
             </div>
-            <div class="col4">
+            <div class="col">
               <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="">
               <p class="col-stat">21K +</p>
               <p><small> registered attendees</small></p>
             </div>
-            <div class="col5">
+            <div class="col">
               <img src="https://cdn2.hubspot.net/hubfs/53/HubSpot-App-Marketplace-White.png" alt="">
               <p class="col-stat">200 +</p>
               <p><small> integrations </small></p>
 
             </div>
-            <div class="col6">
+            <div class="col">
               <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="">
               <p class="col-stat">6 +</p>
               <p><small> lenguages</small></p>
 
             </div>
-            <div class="col7">
+            <div class="col">
               <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="">
               <p class="col-stat">2.6M +</p>
               <p><small> aocial followers</small></p>
 
             </div>
-            <div class="col8">
+            <div class="col">
               <img src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="">
               <p class="col-stat">5K +</p>
               <p><small> profiles and counting</small></p>
@@ -275,53 +275,55 @@
 
     <footer>
       <div class="container">
-        <div class="colonne2 clearfix">
-          <h4>Increase Your Traffic</h4>
-          <p>Ad Software</p>
-          <p>Blog software</p>
-          <p>SEO Software</p>
-          <p>Social Media Software</p>
-          <p>Content Management System</p>
-        </div>
-        <div class="colonne2">
-          <h4>Increase Your Traffic</h4>
-          <p>Ad Software</p>
-          <p>Blog software</p>
-          <p>SEO Software</p>
-          <p>Social Media Software</p>
-          <p>Content Management System</p>
-        </div>
-        <div class="colonne2">
-          <h4>Increase Your Traffic</h4>
-          <p>Ad Software</p>
-          <p>Blog software</p>
-          <p>SEO Software</p>
-          <p>Social Media Software</p>
-          <p>Content Management System</p>
-        </div>
-        <div class="colonne2">
-          <h4>Increase Your Traffic</h4>
-          <p>Ad Software</p>
-          <p>Blog software</p>
-          <p>SEO Software</p>
-          <p>Social Media Software</p>
-          <p>Content Management System</p>
-          <button class="generic" type="button" name="button">Contact HubSpot Support</button> <br>
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-youtube"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-linkedin-in"></i>
-        </div>
-        <div class="lingue">
-          <p>English</p>
-          <p>Deutsch</p>
-          <p>日本人</p>
-          <p>Español</p>
-          <p>Português</p>
-          <p>Français</p>
+        <ul class="colonne2 clearfix">
+          <li><h4>Increase Your Traffic</h4></li>
+          <li>Ad Software</li>
+          <li>Blog software</li>
+          <li>SEO Software</li>
+          <li>Social Media Software</li>
+          <li>Content Management System</li>
+        </ul>
+        <ul class="colonne2 clearfix">
+          <li><h4>Increase Your Traffic</h4></li>
+          <li>Ad Software</li>
+          <li>Blog software</li>
+          <li>SEO Software</li>
+          <li>Social Media Software</li>
+          <li>Content Management System</li>
+        </ul>
+        <ul class="colonne2 clearfix">
+          <li><h4>Increase Your Traffic</h4></li>
+          <li>Ad Software</li>
+          <li>Blog software</li>
+          <li>SEO Software</li>
+          <li>Social Media Software</li>
+          <li>Content Management System</li>
+        </ul>
+        <ul class="colonne2 clearfix">
+          <li><h4>Increase Your Traffic</h4></li>
+          <li>Ad Software</li>
+          <li>Blog software</li>
+          <li>SEO Software</li>
+          <li>Social Media Software</li>
+          <li>Content Management System</li>
+          <li> <button class="generic" type="button" name="button">Contact HubSpot Support</button> <br></li>
+          <ul>
+            <li class="social"><i class="fab fa-facebook-square"></i></li>
+            <li class="social"><i class="fab fa-instagram"></i></li>
+            <li class="social"><i class="fab fa-youtube"></i></li>
+            <li class="social"><i class="fab fa-twitter"></i></li>
+            <li class="social"><i class="fab fa-linkedin-in"></i></li>
+          </ul>
+        </ul>
+        <ul class="lingue">
+          <li>English</li>
+          <li>Deutsch</li>
+          <li>日本人</li>
+          <li>Español</li>
+          <li>Português</li>
+          <li>Français</li>
 
-        </div>
+        </ul>
         <hr>
         <div class="cpyr">
           <img src="https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="">
@@ -329,8 +331,10 @@
 
         </div>
         <div class="pryvc">
-          <p>Legal Stuff</p>
-          <p>Privacy Policy</p>
+          <ul>
+            <li>Legal Stuff</li>
+            <li>Privacy Policy</li>
+          </ul>
 
         </div>
       </div>
