--- a/index.html
+++ b/index.html
@@ -110,12 +110,10 @@
             <h3>POPOLAR FEATURE</h3>
             <hr>
             <ul>
-              <li><i class="fas fa-check-circle"></i></li>
-              <li>Contact Insight</li>
-              <li><i class="fas fa-check-circle"></i></li>
-              <li>Deals</li>
-              <li><i class="fas fa-check-circle"></i></li>
-              <li>Task</li>
+              <li><i class="fas fa-check-circle"></i>Contact Insight</li>
+              <li><i class="fas fa-check-circle"></i>Deals</li>    
+              <li><i class="fas fa-check-circle"></i>Task</li>
+
               </ul>
           </div>
         </section>
